@@ -4,14 +4,13 @@ import io.micronaut.context.annotation.Bean;
 import io.micronaut.context.annotation.Factory;
 
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
 @Factory
 public class RepositoryPathProvider {
 
     @Bean
     public Path repositoryDirectory(){
-        return Paths.get("");
+        return Path.of("");
     }
 
 }
